# GaussED

./: .gitignore  AUTHORS.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
Examples/: Cardio Modelling.ipynb  EI comparison.ipynb  Lotka-Volterra.ipynb  Poisson Equation.ipynb  README.rst  Tomography.ipynb
GaussED/basis/: base.py  laplace.py
GaussED/distribution/: __init__.py  base.py  gaussian.py  gp.py  hilbertGP.py
GaussED/experiment/: acquisition.py  bayes_risk.py  design.py  expected_improvement.py  experiment.py  loss.py  pointwise_variance.py
GaussED/kernel/: __init__.py  anova.py  base.py  matern.py  rational_quadratic.py  spectral.py  squared_exponential.py
GaussED/mean/: base.py  basis_mean.py  constant.py
GaussED/solver/: base.py
GaussED/solver/integral_transform/: base.py  riemann_sum.py
GaussED/solver/optim/: base.py  random_sample.py
GaussED/solver/optimise_transform/: base.py  grid_search.py
GaussED/transforms/: __init__.py  base.py  linear.py  linear_old.py  nonlinear.py  spatial_deformation.py
GaussED/utils/: block_cholesky.py  lin_alg_solvers.py  matrix_sqrt.py  nearest_spd_matrix.py  process_dim_order.py  safe_svd.py  summation_tensor_gen.py
src/gaussed/basis/: base.py  laplace.py
src/gaussed/distribution/: __init__.py  base.py  gp.py  spectralGP.py
src/gaussed/experiment/: __init__.py  acquisition.py  bayes_risk.py  design.py  expected_improvement.py  experiment.py  loss.py  pointwise_variance.py
src/gaussed/kernel/: __init__.py  anova.py  base.py  matern.py  rational_quadratic.py  squared_exponential.py
src/gaussed/mean/: base.py  constant.py
src/gaussed/solver/: base.py
src/gaussed/solver/integral_transform/: base.py  riemann_sum.py
src/gaussed/solver/optim/: base.py  random_sample.py
src/gaussed/solver/optimise_transform/: __init__.py  base.py  (+1 more)
src/gaussed/transforms/: base.py  linear.py  nonlinear.py
src/gaussed/utils/: lin_alg_solvers.py  matrix_sqrt.py  nearest_spd_matrix.py  process_dim_order.py  safe_svd.py  summation_tensor_gen.py
