[metadata]
name = gaussed
description = GaussED: A Probabilistic Programming Language for Sequential Experimental Design
author = Matthew Fisher
author_email = m.fisher1@ncl.ac.uk
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
# url = ...

project_urls =
    Source = https://github.com/MatthewAlexanderFisher/GaussED

platforms = any

# Add further classifiers (if required): https://pypi.org/classifiers/
classifiers =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    scipy # scipy is only required for the linear algebra
    torch # if more installation requirements are required - end line with ;


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    matplotlib

[tool:pytest]
addopts =
    --cov gaussed --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build

testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel
